# middleware

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
.github/workflows/: middleware-strict-ci.yml
include/vix/middleware/: all.hpp  http_cache.hpp  middleware.hpp  module_init.hpp  periodic.hpp  pipeline.hpp  static_dir_bridge.hpp
include/vix/middleware/app/: adapter.hpp  app_middleware.hpp  http_cache.hpp  presets.hpp
include/vix/middleware/auth/: api_key.hpp  jwt.hpp  rbac.hpp  session.hpp
include/vix/middleware/basics/: body_limit.hpp  logger.hpp  recovery.hpp  request_id.hpp  timing.hpp
include/vix/middleware/basics/detail/: ascii.hpp
include/vix/middleware/core/: context.hpp  hooks.hpp  next.hpp  result.hpp
include/vix/middleware/helpers/strings/: strings.hpp
include/vix/middleware/http/: cookies.hpp
include/vix/middleware/observability/: debug_trace.hpp  metrics.hpp  tracing.hpp  utils.hpp
include/vix/middleware/parsers/: form.hpp  json.hpp  multipart.hpp  multipart_save.hpp
include/vix/middleware/performance/: compression.hpp  etag.hpp  static_files.hpp
include/vix/middleware/security/: cors.hpp  csrf.hpp  headers.hpp  ip_filter.hpp  rate_limit.hpp
include/vix/middleware/utils/: clock.hpp  header_utils.hpp  json_writer.hpp  key_builder.hpp  token_bucket.hpp
src/: http_cache.cpp  middleware.cpp  module_init.cpp  pipeline.cpp  session.cpp  static_dir_bridge.cpp
tests/: CMakeLists.txt
tests/auth/: api_key_smoke_test.cpp  jwt_smoke_test.cpp  rbac_smoke_test.cpp  session_smoke_test.cpp
tests/basics/: body_limit_smoke_test.cpp  logger_smoke_test.cpp  recovery_smoke_test.cpp  request_id_smoke_test.cpp  timing_smoke_test.cpp
tests/core/: context_smoke_test.cpp  hooks_merge_smoke_test.cpp  hooks_smoke_test.cpp  next_smoke_test.cpp  result_smoke_test.cpp
tests/http/: cookies_smoke_test.cpp  http_cache_demo.cpp  http_cache_smoke_test.cpp
tests/observability/: debug_trace_smoke_test.cpp  dev_observability_smoke_test.cpp  metrics_smoke_test.cpp  tracing_smoke_test.cpp
tests/parsers/: form_smoke_test.cpp  json_smoke_test.cpp  multipart_smoke_test.cpp
tests/performance/: compression_smoke_test.cpp  etag_smoke_test.cpp  static_files_smoke_test.cpp
tests/pipeline/: pipeline_smoke_test.cpp
tests/security/: cors_smoke_test.cpp  csrf_smoke_test.cpp  headers_smoke_test.cpp  ip_filter_smoke_test.cpp  rate_limit_smoke_test.cpp
tests/utils/: json_writer_smoke_test.cpp  key_builder_smoke_test.cpp  token_bucket_smoke_test.cpp
